# kudago-nominatim-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.host.yml  docker-compose.override.yml  docker-compose.yml  kudago_nominatim_config.py  kudago_nominatim_geo.py  kudago_nominatim_mcp_server.py  kudago_nominatim_utils.py  mcp_config_stdio_snippet.json  mcp_config_streamable_http_snippet.json  mcp_server.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
docker/: nginx.conf
docs/: api.md  architecture.md  docker.md  mcp-api-sources.md  mcp-schema-design.md  mcp.md  routing.md  testing.md  transit-provider-live-tests.md
kudago_mcp_client/: __init__.py
nominatim_geo_client/: endpoints.py  http_client.py
scripts/: dump_mcp_schemas.py  mcp_smoke_common.py  smoke_test.ps1  test_geoapify_transit_live.py  test_google_routes_transit_live.py  test_mcp_http.py  test_mcp_inmemory.py  test_mcp_stdio.py  test_routing_live.py  test_transitous_coverage_live.py  update_mcp_reference_data.py
tests/: conftest.py  test_command_registry.py  test_config.py  test_endpoints.py  test_events_application.py  test_geo_application.py  test_geo_resolution.py  test_geoapify_transit_live.py  test_google_routes_transit_live.py  test_http_client.py  test_job_queue_lifecycle.py  test_location_only_application.py  test_mcp_executor.py  test_mcp_input_schemas.py  test_mcp_normalization.py  test_mcp_reference_snapshot.py  test_mcp_response_limits.py  test_mcp_routing_visibility.py  test_mcp_serializers.py  test_mcp_server.py  test_mcp_service_fields.py  test_mcp_stdio_entrypoint.py  test_mcp_stdio_script.py  test_mcp_tool_catalog.py  test_mcp_validation.py  test_movies_application.py  test_nominatim.py  test_openrouteservice_client.py  test_places_application.py  test_queue_integration.py  test_read_application.py  test_routing_application.py  test_routing_mcp.py  test_routing_queue.py  test_routing_schemas.py  test_transitous_client.py  test_transitous_coverage_live.py  test_transport_selector.py
(+126 files in other folders)
