[project]
name = "kudago-nominatim-mcp-server"
version = "0.1.0"
description = "Standalone KudaGo + Nominatim MCP server for location-aware leisure search."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
