[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kudago-nominatim-server"
version = "0.1.0"
description = "FastAPI and MCP service for KudaGo and Nominatim integrations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "arq>=0.28",
    "httpx>=0.27",
    "fastmcp>=3,<4",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]
namespaces = false

[tool.setuptools.package-data]
"app.mcp.reference_data" = ["*.json"]
